--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@butterfail/tailwindcss-inverted-radius": "^0.1.2",
     "@emotion/is-prop-valid": "latest",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.1",
@@ -61,15 +60,16 @@
     "input-otp": "1.4.1",
     "keen-slider": "^6.8.6",
     "lenis": "^1.3.8",
+    "library-os-utils": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
-    "next": "15.2.2",
+    "next": "14.2.5",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
     "pino-pretty": "^13.1.1",
-    "react": "^18",
+    "react": "18.3.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.1",
     "react-is": "^19.1.1",
     "react-resizable-panels": "^2.1.7",
